--- a/Finalresume.html
+++ b/Finalresume.html
@@ -31,8 +31,8 @@
             <div>
 
                 <h1 style="color: rgb(222, 238, 238);">K. Kharyn Ilunga</h1>
-
-                <P>I am a very disciplined and hardworking person.</P>
+ 
+                <P> <h3 style="color: rgb(196, 189, 181);"> I am a very disciplined and hardworking person.</h3></P>
 
 
             </div>
@@ -45,7 +45,7 @@
                 
     </head>
 
-    <body>
+    <body>-
 
 
         <!-- Start of Main-->
